--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="conteiner">
+      <!-- <div class="conteiner"> -->
       <div class="conteiner main-nav">
         <nav class="site-nav">
           <a class="logo" href="./index.html"><span>Web</span>Studio</a>
@@ -135,7 +135,7 @@
           </div>
           </div>
         </div>
-        </div>
+        <!-- </div> -->
     </header>
     <!--Main-->
     <main>
@@ -211,19 +211,6 @@
           <ul class="img list">
             <li class="img__item">
               <div class="image">
-                <!-- <picture>
-                  <source
-                  srcset="
-                ./image/box1desktop1x.jpg 1x, 
-                ./image/box1desktop2x.jpg 2x 
-                "
-                media="(min-width: 1200px)" />
-                <img
-                  src="./image/box11.jpg"
-                  alt="Стіл з клавіатурою"
-                  width="370"
-                />
-                </picture> -->
                 <img
                 srcset="
                 ./image/box1desktop1x.jpg 1x, 
@@ -239,14 +226,6 @@
             </li>
             <li class="img__item">
               <div class="image">
-                <!-- <picture>
-                  <source
-                  srcset="
-                ./image/box2desktop1x.jpg 1x, 
-                ./image/box2desktop2x.jpg 2x 
-                "
-                media="(min-width: 1200px)" />
-                </picture> -->
                 <img
                 srcset="
                 ./image/box2desktop1x.jpg 1x, 
@@ -262,14 +241,6 @@
             </li>
             <li class="img__item">
               <div class="image">
-                <!-- <picture>
-                  <source
-                  srcset="
-                ./image/box3desktop1x.jpg 1x, 
-                ./image/box3desktop2x.jpg 2x 
-                "
-                media="(min-width: 1200px)" />
-                </picture> -->
                 <img
                 srcset="
                 ./image/box3desktop1x.jpg 1x, 
@@ -288,7 +259,7 @@
       <!--Наша команда-->
       <section class="section__work">
         <div class="conteiner">
-          <h2 class="section__title">Наша команда</h2>
+          <h2 class="section__work__title">Наша команда</h2>
           <ul class="work list">
             <li class="work__item">
               <picture>
@@ -540,7 +511,7 @@
       <!-- Постійні клієнти -->
       <section class="section__client">
         <div class="conteiner">
-          <h2 class="section__title">Постійні клієнти</h2>
+          <h2 class="section__client__title">Постійні клієнти</h2>
           <ul class="client list">
             <li class="client__item">
               <a class="client__link" href="">
