--- a/index.html
+++ b/index.html
@@ -562,6 +562,7 @@
     <footer class="footer">
       <div class="conteiner">
         <div class="content__social">
+          <div class="footer__social__tab">
         <div class="footer__soc">
           <div class="footer__logos">
      <a href="./index.html" class="footer__logo"><span>Web</span>Studio</a>
@@ -622,6 +623,7 @@
               </a>
             </li>
           </ul>
+        </div>
         </div>
         <form class="footer__form__contact">
           <p class="footer__contact__title">підпишіться на розсилку</p>
